update gitigonre to remove pom dependencies xml