@@ -42,8 +42,7 @@
                 <version>3.13.0</version>
                 <configuration>
                     <source>21</source>
-                    <target>11</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <target>21</target>
                 </configuration>
 
             </plugin>
@@ -51,7 +50,7 @@
     </build>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
